Revert "feat(DATA-1442): add global resources"
This reverts commit 445da3fab216a2517f6c8d6f7948577af1b80777.